--- a/sompy/examples/california_housing_rectangular_grid.ipynb
+++ b/sompy/examples/california_housing_rectangular_grid.ipynb
@@ -49,49 +49,45 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MqkvAgdyHkFP",
-        "outputId": "d21b2136-6111-49c7-cdff-dda7e34f4511",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MqkvAgdyHkFP",
+        "outputId": "2a2ebde0-40b6-486b-f320-1db9f8618669"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/jdickson99/SOMPY/master/setup.py\n",
         "!python setup.py install"
       ],
-      "execution_count": 10,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-05-06 00:46:27--  https://raw.githubusercontent.com/jdickson99/SOMPY/master/setup.py\n",
+            "--2021-05-06 01:26:36--  https://raw.githubusercontent.com/jdickson99/SOMPY/master/setup.py\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 406 [text/plain]\n",
-            "Saving to: ‘setup.py.2’\n",
+            "Saving to: ‘setup.py.3’\n",
             "\n",
-            "\rsetup.py.2            0%[                    ]       0  --.-KB/s               \rsetup.py.2          100%[===================>]     406  --.-KB/s    in 0s      \n",
+            "\rsetup.py.3            0%[                    ]       0  --.-KB/s               \rsetup.py.3          100%[===================>]     406  --.-KB/s    in 0s      \n",
             "\n",
-            "2021-05-06 00:46:27 (13.9 MB/s) - ‘setup.py.2’ saved [406/406]\n",
+            "2021-05-06 01:26:36 (29.8 MB/s) - ‘setup.py.3’ saved [406/406]\n",
             "\n",
             "running install\n",
             "running bdist_egg\n",
             "running egg_info\n",
-            "creating SOMPY.egg-info\n",
             "writing SOMPY.egg-info/PKG-INFO\n",
             "writing dependency_links to SOMPY.egg-info/dependency_links.txt\n",
             "writing requirements to SOMPY.egg-info/requires.txt\n",
             "writing top-level names to SOMPY.egg-info/top_level.txt\n",
-            "writing manifest file 'SOMPY.egg-info/SOURCES.txt'\n",
             "reading manifest file 'SOMPY.egg-info/SOURCES.txt'\n",
             "writing manifest file 'SOMPY.egg-info/SOURCES.txt'\n",
             "installing library code to build/bdist.linux-x86_64/egg\n",
             "running install_lib\n",
             "warning: install_lib: 'build/lib' does not exist -- no Python modules to install\n",
             "\n",
-            "creating build\n",
-            "creating build/bdist.linux-x86_64\n",
             "creating build/bdist.linux-x86_64/egg\n",
             "creating build/bdist.linux-x86_64/egg/EGG-INFO\n",
             "copying SOMPY.egg-info/PKG-INFO -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
@@ -100,12 +96,12 @@
             "copying SOMPY.egg-info/requires.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
             "copying SOMPY.egg-info/top_level.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
             "zip_safe flag not set; analyzing archive contents...\n",
-            "creating dist\n",
             "creating 'dist/SOMPY-1.1.1-py3.7.egg' and adding 'build/bdist.linux-x86_64/egg' to it\n",
             "removing 'build/bdist.linux-x86_64/egg' (and everything under it)\n",
             "Processing SOMPY-1.1.1-py3.7.egg\n",
+            "Removing /usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg\n",
             "Copying SOMPY-1.1.1-py3.7.egg to /usr/local/lib/python3.7/dist-packages\n",
-            "Adding SOMPY 1.1.1 to easy-install.pth file\n",
+            "SOMPY 1.1.1 is already the active version in easy-install.pth\n",
             "\n",
             "Installed /usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg\n",
             "Processing dependencies for SOMPY==1.1.1\n",
@@ -146,34 +142,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fnhQJ8cTJYZ0",
-        "outputId": "4a870221-1c10-44ce-9682-bf03b3feaa22",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!pip install sompy"
-      ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: sompy in /usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg (1.1.1)\n",
-            "Requirement already satisfied: numpy>=1.7 in /usr/local/lib/python3.7/dist-packages (from sompy) (1.19.5)\n",
-            "Requirement already satisfied: scipy>=0.9 in /usr/local/lib/python3.7/dist-packages (from sompy) (1.4.1)\n",
-            "Requirement already satisfied: scikit-learn>=0.21 in /usr/local/lib/python3.7/dist-packages (from sompy) (0.22.2.post1)\n",
-            "Requirement already satisfied: numexpr>=2.5 in /usr/local/lib/python3.7/dist-packages (from sompy) (2.7.3)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.21->sompy) (1.0.1)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "vL_HqgGDHaoD"
       },
       "source": [
@@ -182,25 +150,28 @@
         "from matplotlib import pyplot as plt\n",
         "from sklearn.datasets import fetch_california_housing\n"
       ],
-      "execution_count": 23,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BDL3pnEEQqdG",
-        "outputId": "b79d84d2-aa3c-4bdf-dd39-6f80f87fb717",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 330
-        }
+        },
+        "id": "BDL3pnEEQqdG",
+        "outputId": "b4eac1ce-6d18-4b3a-bcfb-3df9e53defe3"
       },
       "source": [
         "#from sompy.sompy import SOMFactory\n",
-        "#sys.path = '/usr/local/lib/python3.7/dist-packages/easy-install.pth'\n",
-        "import sompy"
+        "import os\n",
+        "os.getcwd()\n",
+        "\n",
+        "#sys.path = '/usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg'\n",
+        "import SOMPY"
       ],
-      "execution_count": 27,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "error",
@@ -209,8 +180,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-27-710fdb0555b2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#from sompy.sompy import SOMFactory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/usr/local/lib/python3.7/dist-packages/easy-install.pth'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msompy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sompy'",
+            "\u001b[0;32m<ipython-input-19-2c6870fe3d4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/usr/local/lib/python3.7/dist-packages/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#sys.path = '/usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mSompy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Sompy'",
             "",
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
           ]
