--- a/sompy/examples/california_housing_rectangular_grid.ipynb
+++ b/sompy/examples/california_housing_rectangular_grid.ipynb
@@ -49,91 +49,34 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "6Mq9epOfXr2O",
+        "outputId": "b2e465cd-87a6-4e81-b7a4-95681a0658f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "MqkvAgdyHkFP",
-        "outputId": "2a2ebde0-40b6-486b-f320-1db9f8618669"
+        }
       },
       "source": [
-        "!wget https://raw.githubusercontent.com/jdickson99/SOMPY/master/setup.py\n",
-        "!python setup.py install"
+        "!pip install git+https://github.com/sevamoo/SOMPY.git "
       ],
-      "execution_count": 1,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-05-06 01:26:36--  https://raw.githubusercontent.com/jdickson99/SOMPY/master/setup.py\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 406 [text/plain]\n",
-            "Saving to: ‘setup.py.3’\n",
-            "\n",
-            "\rsetup.py.3            0%[                    ]       0  --.-KB/s               \rsetup.py.3          100%[===================>]     406  --.-KB/s    in 0s      \n",
-            "\n",
-            "2021-05-06 01:26:36 (29.8 MB/s) - ‘setup.py.3’ saved [406/406]\n",
-            "\n",
-            "running install\n",
-            "running bdist_egg\n",
-            "running egg_info\n",
-            "writing SOMPY.egg-info/PKG-INFO\n",
-            "writing dependency_links to SOMPY.egg-info/dependency_links.txt\n",
-            "writing requirements to SOMPY.egg-info/requires.txt\n",
-            "writing top-level names to SOMPY.egg-info/top_level.txt\n",
-            "reading manifest file 'SOMPY.egg-info/SOURCES.txt'\n",
-            "writing manifest file 'SOMPY.egg-info/SOURCES.txt'\n",
-            "installing library code to build/bdist.linux-x86_64/egg\n",
-            "running install_lib\n",
-            "warning: install_lib: 'build/lib' does not exist -- no Python modules to install\n",
-            "\n",
-            "creating build/bdist.linux-x86_64/egg\n",
-            "creating build/bdist.linux-x86_64/egg/EGG-INFO\n",
-            "copying SOMPY.egg-info/PKG-INFO -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-            "copying SOMPY.egg-info/SOURCES.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-            "copying SOMPY.egg-info/dependency_links.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-            "copying SOMPY.egg-info/requires.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-            "copying SOMPY.egg-info/top_level.txt -> build/bdist.linux-x86_64/egg/EGG-INFO\n",
-            "zip_safe flag not set; analyzing archive contents...\n",
-            "creating 'dist/SOMPY-1.1.1-py3.7.egg' and adding 'build/bdist.linux-x86_64/egg' to it\n",
-            "removing 'build/bdist.linux-x86_64/egg' (and everything under it)\n",
-            "Processing SOMPY-1.1.1-py3.7.egg\n",
-            "Removing /usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg\n",
-            "Copying SOMPY-1.1.1-py3.7.egg to /usr/local/lib/python3.7/dist-packages\n",
-            "SOMPY 1.1.1 is already the active version in easy-install.pth\n",
-            "\n",
-            "Installed /usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg\n",
-            "Processing dependencies for SOMPY==1.1.1\n",
-            "Searching for numexpr==2.7.3\n",
-            "Best match: numexpr 2.7.3\n",
-            "Adding numexpr 2.7.3 to easy-install.pth file\n",
-            "\n",
-            "Using /usr/local/lib/python3.7/dist-packages\n",
-            "Searching for scikit-learn==0.22.2.post1\n",
-            "Best match: scikit-learn 0.22.2.post1\n",
-            "Adding scikit-learn 0.22.2.post1 to easy-install.pth file\n",
-            "\n",
-            "Using /usr/local/lib/python3.7/dist-packages\n",
-            "Searching for scipy==1.4.1\n",
-            "Best match: scipy 1.4.1\n",
-            "Adding scipy 1.4.1 to easy-install.pth file\n",
-            "\n",
-            "Using /usr/local/lib/python3.7/dist-packages\n",
-            "Searching for numpy==1.19.5\n",
-            "Best match: numpy 1.19.5\n",
-            "Adding numpy 1.19.5 to easy-install.pth file\n",
-            "Installing f2py script to /usr/local/bin\n",
-            "Installing f2py3 script to /usr/local/bin\n",
-            "Installing f2py3.7 script to /usr/local/bin\n",
-            "\n",
-            "Using /usr/local/lib/python3.7/dist-packages\n",
-            "Searching for joblib==1.0.1\n",
-            "Best match: joblib 1.0.1\n",
-            "Adding joblib 1.0.1 to easy-install.pth file\n",
-            "\n",
-            "Using /usr/local/lib/python3.7/dist-packages\n",
-            "Finished processing dependencies for SOMPY==1.1.1\n"
+            "Collecting git+https://github.com/sevamoo/SOMPY.git\n",
+            "  Cloning https://github.com/sevamoo/SOMPY.git to /tmp/pip-req-build-tnxpexdy\n",
+            "  Running command git clone -q https://github.com/sevamoo/SOMPY.git /tmp/pip-req-build-tnxpexdy\n",
+            "Requirement already satisfied (use --upgrade to upgrade): SOMPY==1.1.1 from git+https://github.com/sevamoo/SOMPY.git in /usr/local/lib/python3.7/dist-packages\n",
+            "Requirement already satisfied: numpy>=1.7 in /usr/local/lib/python3.7/dist-packages (from SOMPY==1.1.1) (1.19.5)\n",
+            "Requirement already satisfied: scipy>=0.9 in /usr/local/lib/python3.7/dist-packages (from SOMPY==1.1.1) (1.4.1)\n",
+            "Requirement already satisfied: scikit-learn>=0.21 in /usr/local/lib/python3.7/dist-packages (from SOMPY==1.1.1) (0.22.2.post1)\n",
+            "Requirement already satisfied: numexpr>=2.5 in /usr/local/lib/python3.7/dist-packages (from SOMPY==1.1.1) (2.7.3)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.7/dist-packages (from scikit-learn>=0.21->SOMPY==1.1.1) (1.0.1)\n",
+            "Building wheels for collected packages: SOMPY\n",
+            "  Building wheel for SOMPY (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for SOMPY: filename=SOMPY-1.1.1-cp37-none-any.whl size=28155 sha256=9baf8a9ddc53876db9d78f91dc2341a91556ad01e9e3aee3b31b6d8640f85e51\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-gysp4nsv/wheels/97/7f/e9/77eaac4e79f64a701e9788d91ba334f6c7f38f96a2c6eb8261\n",
+            "Successfully built SOMPY\n"
           ],
           "name": "stdout"
         }
@@ -148,9 +91,9 @@
         "%matplotlib inline\n",
         "import numpy as np\n",
         "from matplotlib import pyplot as plt\n",
-        "from sklearn.datasets import fetch_california_housing\n"
+        "from sklearn.datasets import fetch_california_housing \n"
       ],
-      "execution_count": 3,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -161,17 +104,17 @@
           "height": 330
         },
         "id": "BDL3pnEEQqdG",
-        "outputId": "b4eac1ce-6d18-4b3a-bcfb-3df9e53defe3"
+        "outputId": "b22c955a-2655-465e-a70b-dfd6b5d3e124"
       },
       "source": [
         "#from sompy.sompy import SOMFactory\n",
-        "import os\n",
-        "os.getcwd()\n",
+        "#import os\n",
+        "#os.getcwd()\n",
         "\n",
         "#sys.path = '/usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg'\n",
-        "import SOMPY"
+        "import sompy"
       ],
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "error",
@@ -180,8 +123,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-2c6870fe3d4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/usr/local/lib/python3.7/dist-packages/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#sys.path = '/usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mSompy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Sompy'",
+            "\u001b[0;32m<ipython-input-23-8e30fdda4ab0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#sys.path = '/usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0msompy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sompy'",
             "",
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
           ]
