--- a/sompy/examples/california_housing_rectangular_grid.ipynb
+++ b/sompy/examples/california_housing_rectangular_grid.ipynb
@@ -66,22 +66,8 @@
         "%matplotlib inline\n",
         "import numpy as np\n",
         "from matplotlib import pyplot as plt\n",
-        "from sklearn.datasets import fetch_california_housing \n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BDL3pnEEQqdG"
-      },
-      "source": [
-        "#from sompy.sompy import SOMFactory\n",
-        "#import os\n",
-        "#os.getcwd()\n",
+        "from sklearn.datasets import fetch_california_housing \n",
         "\n",
-        "#sys.path = '/usr/local/lib/python3.7/dist-packages/SOMPY-1.1.1-py3.7.egg'\n",
         "import sompy"
       ],
       "execution_count": null,
@@ -276,10 +262,10 @@
       "source": [
         "From the visualizations above we can extract different conclusions like,\n",
         "- The houses which have, on average, more bedrooms are generally on lower average income areas.\n",
-        "- The highest occupations occours only in cities where the population is high.\n",
+        "- The highest average occupation occours only in cities where the population is high.\n",
         "- The latitude and longitude of the samples have a strong negative correlation. It can be because California is diagonally oriented with respect to the coordinates system.\n",
-        "- The most demanded houses (AveOccup) are placed on the 37~38 latitude and -121.6~-121 longitude; i.e. near San-Francisco area\n",
-        "- Old houses are more likely to have less rooms and bedrooms on average.\n",
+        "- Houses with the highest average occupancy are placed on the 37 to 38 latitude and -121.6 to -121 longitude; i.e. near San-Francisco area\n",
+        "- Old houses are more likely to have less rooms and less bedrooms on average.\n",
         "- Low average income areas usually have less rooms and bedrooms than high average ones\n",
         "- The house value seems to be related with the average income of the area where it sits.\n",
         "\n",
